# translator

./: .gitignore  README.md  docker-compose.yml  run-tests.sh  setup-project.sh  start-backend.sh  start-dev.sh  start-frontend.sh
backend/: .dockerignore  Dockerfile  README.md  dev.sh  install.sh  pyproject.toml  requirements.txt  run.py  run_tests.py  setup.py  setup.sh
backend/app/: main.py
backend/app/api/: file_upload_routes.py  translation_routes.py
backend/app/core/: config.py  middleware.py
backend/app/models/: chapter.py  schemas.py
backend/app/services/: formatting_service.py  openai_client.py  pdf_extraction.py  translation_service.py
backend/tests/: README.md  __init__.py  conftest.py  test_end_to_end.py
backend/tests/api/: __init__.py  test_file_upload.py  test_multi_chapter_translation.py
backend/tests/services/: __init__.py  test_pdf_extraction.py  test_pdf_generation.py  test_translation_service.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts
